Gtk+-3.20 T. themes: fix double border in mate-volume-control notebook
Fixes https://github.com/mate-desktop/mate-themes/issues/193

--- a/desktop-themes/TraditionalOk/gtk-3.0/mate-applications.css
+++ b/desktop-themes/TraditionalOk/gtk-3.0/mate-applications.css
@@ -586,7 +586,7 @@ window.background.mate-terminal > box.vertical > notebook > header.top tab:check
  ***********************/
 
 /* application notebook page */
-GvcMixerDialog notebook.frame scrolledwindow.frame {
+GvcMixerDialog notebook.frame scrolledwindow {
     border-style: none;
 }
 
